<resources>
    <string name="app_name">Booklyn</string>
    <string name="filter">Фильтр</string>
    <string name="sort">Сортировать</string>
    <plurals name="feedbacks">
        <item quantity="one">отзыв</item>
        <item quantity="two">отзыва</item>
        <item quantity="other">отзывов</item>
    </plurals>

    <!-- Общие надписи -->
    <string name="apply">Принять</string>
    <string name="cancel">Отменить</string>
    <string name="remove">Удалить</string>
    <string name="add">Добавить</string>
    <string name="telephone_number">Номер телефона</string>
    <string name="full_name">ФИО</string>
    <string name="mail">Почта</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="continu">Продолжить</string>
    <string name="search">Поиск</string>
    <string name="location">Местоположение</string>
    <string name="photos">Фотографии</string>
    <string name="refresh">Обновить</string>
    <string name="select">Выбрать</string>


    <!-- Окно сортировки -->
    <string name="sort_by_name">По имени</string>
    <string name="sort_by_price">По цене</string>
    <string name="sort_by_rate">По рейтингу</string>
    <string name="in_ascending_order">По возрастанию</string>
    <string name="in_descending_order">По убыванию</string>

    <!-- Конвертация рейтинга в текст -->
    <string name="very_good">Очень хорошо</string>
    <string name="good">Хорошо</string>
    <string name="normal">Нормально</string>
    <string name="not_bad">Приемлемо</string>
    <string name="terrible">Ужасно</string>

    <!-- Страница выбора отеля -->
    <string name="hotel_selection_title">Отели</string>
    <string name="hotel_title">Отель</string>
    <string name="hotel_selection_add_new_hotel">+ Добавить отель</string>

    <!-- Страница описания отеля -->
    <string name="hotel_info_select_room">Выбрать комнату</string>
    <string name="hotel_info_mobile_price">Цена на мобильных устройствах</string>
    <string name="hotel_info_user_feedbacks">Рейтинги и отзывы пользователей</string>
    <string name="hotel_info_check_all_feedbacks">+ просмотреть все отзывы</string>
    <string name="hotel_info_check_all_photos">+ просмотреть все фотографии</string>

    <!-- Страница с информацией о брони -->
    <string name="order_info_about_order">Информация о заказе</string>
    <string name="order_info_room_number">Выбранный тип номера</string>
    <string name="order_info_about_room">Информация о номере</string>
    <string name="order_info_about_trip_duration">Количество дней</string>
    <string name="order_info_VAT">Налоги и сборы (10%)</string>
    <string name="order_info_result_sum">Итог</string>
    <plurals name="days">
        <item quantity="one">день</item>
        <item quantity="few">дня</item>
        <item quantity="other">дней</item>
    </plurals>
    <string name="order_info_about_customer">Информация о покупателе</string>
    <string name="order_info_promocode">Промокод</string>
    <string name="order_info_input_invite_promocode">Если у вас есть промо-код, пожалуйста, введите его ниже</string>
    <string name="order_info_input_promo">ПРОМОКОД</string>
    <string name="order_info_book">Оформить заказ</string>

    <!-- Страница оплаты -->
    <string name="payment_title">Оплата картой</string>
    <string name="payment_card_number">Номер карты</string>
    <string name="payment_card_holder_name">Имя держателя</string>
    <string name="payment_card_date">Дата</string>
    <string name="payment_CVV">CVV</string>
    <string name="payment_pay">Оплатить</string>

    <!-- Страница с фотографиями -->
    <string name="photos_title">Фотографии</string>

    <!-- Страница с отзывами -->
    <string name="feedback_title">Отзывы и рейтинг</string>
    <string name="feedback_add">+ Добавить отзыв</string>

    <!-- Страница с добавлением отзыва -->
    <string name="feedback_add_feedback">Поставьте оценку</string>
    <string name="feedback_add_input_msg">Добавьте отзыв</string>

    <!-- Страница выбора номера -->
    <string name="room_selection_title">Выберите апартаменты</string>
    <string name="room_selection_add_new_room">+ Добавить комнату</string>

    <!-- Страница пользователя -->
    <string name="user_profile_title">Профиль</string>
    <string name="user_profile_check_all_users">все пользователи</string>

    <!-- Страница настроек -->
    <string name="settings_title">Настройки</string>
    <string name="settings_notifications">Уведомления</string>
    <string name="settings_privacy_policy">Политика приватности</string>
    <string name="settings_terms_and_conditions">Правила и условия</string>
    <string name="settings_about_the_app">О приложении</string>
    <string name="settings_support">Поддержка</string>
    <string name="settings_rate">Оцените Booklyn</string>
    <string name="setting_leave_account">Выйти из аккаунта</string>
    <string name="privacy_policy_text">\t1. Использование Пользователем сайта приложения означает согласие с настоящей Политикой и условиями обработки персональных данных Пользователя.\n
\t2. В случае несогласия с условиями Политики Пользователь должен прекратить использование приложения.\n
\t3. Настоящая Политика применяется только к данному приложению. Администрация не контролирует и не несет ответственность за сайты третьих лиц, на которые Пользователь может перейти по ссылкам, доступным в приложении.\n
\t4. Администрация приложения не проверяет достоверность персональных данных, предоставляемых Пользователем сайта.</string>
    <string name="terms_and_conditions_text">\t1. При Бронировании вы принимаете применимые правила, отображаемые в процессе бронирования. Вы найдете правила отмены каждого Поставщика услуг и любые другие правила (о возрастных требованиях, залогах / страховых залогах, доплатах за групповые Бронирования, дополнительные кровати, завтрак и домашних животных, а также о принимаемых картах и ​​т. д.) на нашей Платформе: на информационной странице Поставщика услуг, в процессе бронирования, в разделе с важной информацией и (или) в электронном письме с подтверждением бронирования или билете (если применимо).

\n\n\t2. В случае отмены вами Бронирования или незаезда любой сбор за отмену/незаезд и любой возврат будут зависеть от правил Поставщика услуг в отношении отмены/незаезда.

\n\n\t3. Некоторые Бронирования нельзя отменить бесплатно, а другие можно отменить бесплатно только до определенного времени.

\n\n\t4. Если вы забронировали Туристический продукт и внесли предоплату (включая все составляющие цены и (или) страховой залог, если применимо) Поставщик услуг может отменить Бронирование без уведомления, если он не сможет получить остаток средств в соответствующую дату. Если он это сделает, любой произведенный вами невозвратный платеж будет возвращен только по усмотрению Поставщика услуг. Вы несете ответственность за то, чтобы платеж был произведен вовремя (чтобы данные вашего банка, дебетовой карты или кредитной карты были верны и чтобы на вашем счете было достаточно средств).

\n\n\t5. Если вы думаете, что не приедете вовремя, обратитесь к своему Поставщику услуг и сообщите ему, когда он может вас ожидать, чтобы он не отменил ваше Бронирование. Если вы опоздали, мы не несем ответственности за последствия (например, отмену вашего Бронирования или любые сборы, которые может взимать Поставщик услуг).

\n\n\t6. Как лицо, делающее Бронирование, вы несете ответственность за действия и поведение (в отношении Туристического продукта) всех членов вашей группы. Вы также несете ответственность за получение согласия от этих лиц, прежде чем предоставлять нам их персональные данные.</string>
    <string name="about_the_app_text">\tРазработано соучередителем компании ..Point Демином Иваном Александровичем. Приложение Booklyn предназначено для бронирования гостиниц, просмотра их рейтинга, фотографий</string>
    <string name="support_text">По всем вопросам и предложениям https://vk.com/vanuuus</string>

    <!-- Выбор даты -->
    <string name="trip_date_title">Выберите дату</string>
    <string name="trip_date_check_in">Заезд</string>
    <string name="trip_date_check_out">Выезд</string>
    <string name="trip_date_chose_dates">Выбрать даты</string>

    <!-- Страница добавления отеля -->
    <string name="input_hotel_title">Добавление отеля</string>
    <string name="input_hotel_name">Название отеля*</string>
    <string name="input_hotel_location">Местоположение*</string>
    <string name="input_hotel_telephone">Номер телефона*</string>
    <string name="input_hotel_email">Почта</string>
    <string name="input_hotel_description">Описание*</string>

    <!-- Страница добавления номера -->
    <string name="input_room_title">Добавление номера</string>
    <string name="input_room_name">Название номера*</string>
    <string name="input_room_price">Цена в ₽*</string>

    <!-- Страница всех пользователей -->
    <string name="all_users_title">Все пользвователи</string>

    <!-- Страница авторизации -->
    <string name="authorization_title">Авторизация</string>
    <string name="authorization_forget_password">Забыли пароль?</string>
    <string name="authorization_dont_have_account">У вас нет учетной записи?</string>
    <string name="authorization_create_account">Создайте ее</string>

    <!-- Страница смены пароля -->
    <string name="change_password_title">Смена пароля</string>
    <string name="change_password_new_password">Введите новый пароль</string>
    <string name="change_password_again_new_password">Повторите новый пароль</string>
    <string name="change_password_input_new_password">Новый пароль</string>

    <!-- Страница восстановления пароля -->
    <string name="reset_password_title">Восстановление пароля</string>
    <string name="reset_password_info">Введите ваш номер телефона, и следуйте инструкциям для восстановления вашего пароля</string>
    <string name="reset_password_remeber_password">Вспомнили пароль?</string>
    <string name="reset_password_remeber_enter">Войдите в систему</string>

    <!-- Страница регистрации -->
    <string name="registration_title">Регистрация</string>
    <string name="registration_input_full_name">ФИО*</string>
    <string name="registration_input_email">Почта*</string>
    <string name="registration_input_password">Пароль*</string>
    <string name="registration_create_account">Создать аккаунт</string>
    <string name="registration_agreement">Создавая учетную запись, вы соглашаетесь с нашими условиями</string>
    <string name="registration_already_have_account">У вас уже есть учетная запись?</string>

    <!-- Страница верификации -->
    <string name="verification_title">Верификация</string>
    <string name="verification_info">Верификация с помощью мобильного телефона</string>
    <string name="verification_info_below">Код был отправлено на ваш номер мобильного телефона</string>
    <string name="verification_dont_have_code">Не получили код?</string>
    <string name="verification_send_again">Отправить заново</string>
    <string name="verification_change_number">Изменить номер</string>

    <!-- Элемент отеля -->
    <string name="hotel_item_price_start">Цена начинается от</string>
    <string name="hotel_item_transef">Перейти</string>

    <!-- Элемент номера -->
    <string name="room_item_no_payback">Стоимость не возвращается</string>
    <string name="roon_item_safe_pay">Безопасная оплата заранее через\nприложение Booklyn</string>


</resources>