<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization.RegistrationFragment"
    android:background="@drawable/start_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:textColor="@color/white"
        android:text="@string/registration_title"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/settings_background"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/registration_editText_full_name"
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_input_full_name"
            android:textSize="@dimen/simple_size"
            android:drawableLeft="@drawable/user_icon"
            android:drawablePadding="10dp"
            android:inputType="textCapWords"
            android:maxLength="25"/>

        <EditText
            android:id="@+id/registration_editText_email"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_input_email"
            android:textSize="@dimen/simple_size"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:maxLength="25"/>

        <EditText
            android:id="@+id/registration_editText_telephone"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_hotel_telephone"
            android:textSize="@dimen/simple_size"
            android:drawableLeft="@drawable/telephone"
            android:drawablePadding="10dp"
            android:inputType="text"
            android:maxLength="18"/>

        <EditText
            android:id="@+id/registration_editText_password"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_input_password"
            android:textSize="@dimen/simple_size"
            android:drawableLeft="@drawable/lock_sign"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:maxLength="25"/>


        <Button
            android:id="@+id/registration_button_enter"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/registration_create_account"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/registration_agreement"
            android:padding="15dp"
            android:gravity="center"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom|center"
            android:text="@string/registration_already_have_account"/>

        <TextView
            android:id="@+id/registration_textView_enter_the_system"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/lime"
            android:text="@string/reset_password_remeber_enter" />

    </LinearLayout>
</FrameLayout>