<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization.ForgetPasswordFragment"
    android:background="@drawable/start_background">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:textColor="@color/white"
        android:text="@string/reset_password_title"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/settings_background"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_info"/>

        <EditText
            android:id="@+id/forget_password_editText_telephone"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telephone_number"
            android:textSize="@dimen/simple_size"
            android:drawableLeft="@drawable/telephone"
            android:drawablePadding="10dp"
            android:inputType="text"
            android:maxLength="18"/>


        <Button
            android:id="@+id/forget_password_button_continue"
            android:layout_marginTop="290dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/continu"/>


        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom|center"
            android:text="@string/reset_password_remeber_password"/>

        <TextView
            android:id="@+id/forget_password_textView_enter_the_system"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/lime"
            android:text="@string/reset_password_remeber_enter" />

    </LinearLayout>
</FrameLayout>