<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization.ChangePasswordFragment"
    android:background="@drawable/start_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:textColor="@color/white"
        android:text="@string/change_password_title"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/settings_background"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password_new_password"/>

        <EditText
            android:id="@+id/change_password_editText_new_password"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/change_password_input_new_password"
            android:textSize="@dimen/simple_size"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:maxLength="25"/>

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password_again_new_password" />

        <EditText
            android:id="@+id/change_password_editText_new_password_again"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/change_password_input_new_password"
            android:textSize="@dimen/simple_size"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:maxLength="25"/>


        <Button
            android:id="@+id/change_password_button_continue"
            android:layout_marginTop="200dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/continu"/>


    </LinearLayout>

</FrameLayout>