<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".user_page.UserPageFragment"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="350dp">

        <TextView
            android:paddingTop="50dp"
            android:paddingLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/user_profile_title"
            android:textSize="@dimen/title_size"
            android:textColor="@color/white"
            android:fontFamily="casual"
            android:background="@color/primary_color"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_marginTop="60dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="#C4C4C4"
            android:layout_gravity="center"/>
    </FrameLayout>

    <EditText

        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:textColor="#C4C4C4"
        android:backgroundTint="#C4C4C4"
        android:textSize="@dimen/simple_size"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/customer_name"
        android:drawablePadding="5dp"/>


    <EditText
        android:drawablePadding="5dp"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/telephone_number"
        android:textColor="#C4C4C4"
        android:backgroundTint="#C4C4C4"
        android:textSize="@dimen/simple_size"
        android:inputType="number"
        android:layout_marginTop="25dp"
        android:drawableLeft="@drawable/telephone"/>

    <EditText
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:textColor="#C4C4C4"
        android:backgroundTint="#C4C4C4"
        android:textSize="@dimen/simple_size"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="5dp"/>

    <Button
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/big_blue_button"
        android:layout_gravity="center"
        android:text="@string/refresh"/>

</LinearLayout>